# calculator

./: .gitignore  CMakeLists.txt  readme.md
hdr/: .console_view.hpp.kate-swp  .format_key.hpp.kate-swp  calculator.hpp  console_literals.hpp  console_view.hpp  format_key.hpp  parser.hpp  result.hpp  result_list.hpp  shape_areas.hpp  shape_info.hpp  shape_model.hpp  shapes.hpp  utility_shape_text.hpp
hdr/qml/: qml_calculator.hpp  shape_list_model.hpp
hdr/qtw/: area_view.hpp  calcutator_window.hpp  inputnumberqvalidator.hpp  measure_units.hpp  modal_option.hpp  shape_buttons.hpp  shape_input.hpp  shape_list.hpp  shape_options.hpp  shape_view.hpp  utility_measure_units_qt.hpp
prototype/: prototype_calc.pyw
res/: resourses.qrc
src/: calculator.cpp  result.cpp  shape_areas.cpp  shapes.cpp
src/console/: .console_view.cpp.kate-swp  console_view.cpp  main_console.cpp  shape_info.cpp
src/model/: iterator.cpp  shape_model.cpp
src/parser/: parser.cpp
src/qml/: AreaViewer.qml  CMakeLists.txt  Calculator.qml  ChooseShape.qml  CommandButtons.qml  InnerWidget.qml  InputCheckBox.qml  InputField.qml  ResultList.qml  ShapeButton.qml  ShapeCounter.qml  ShapeInput.qml  ShapeList.qml  ShapeView.qml  StandartButton.qml  Style.qml  main.cpp  main.qml  qml.qrc  qml_calculator.cpp  qmldir  result_list_model.cpp  shape_input_view.cpp  shape_list_model.cpp
src/qtwidgets/: area_view.cpp  calculator_window.cpp  inputnumberqvalidator.cpp  main_qtwidgets.cpp  measure_units.cpp  modal_options.cpp  shape_buttons.cpp  shape_input.cpp  shape_list.cpp  shape_options.cpp  shape_view.cpp  utility_measure_units_qt.cpp
tests/model_test/: CMakeLists.txt  make_model_test.cpp  model_test.cpp  model_test.hpp
tests/parser_test/: CMakeLists.txt  parser_test.cpp  readme.txt
ui/: shape_view.ui
